--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ecommerce</title>
-    <link rel="stylesheet" href="../assets/css/home.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
   </head>
@@ -14,7 +15,7 @@
         <div class="row pt-1">
           <div class="offset-1 col-2">
             <div class="mt-2">
-              <img src="../assets/images/logo-2.png" class="logo-width" alt="logo"/>
+              <img src="assets/images/logo-2.png" class="logo-width" alt="logo"/>
             </div>
           </div>
           <div class="col-5">
@@ -59,17 +60,17 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <a href="#">
-            <img class="d-block w-100" src="../assets/images/carousel-1.jpg" alt="Promoção carrossel">
+            <img class="d-block w-100" src="assets/images/carousel-1.jpg" alt="Promoção carrossel">
           </a>
         </div>
         <div class="carousel-item">
           <a href="#">
-            <img class="d-block w-100" src="../assets/images/carousel-2.jpg" alt="Promoção carrossel">
+            <img class="d-block w-100" src="assets/images/carousel-2.jpg" alt="Promoção carrossel">
           </a>
         </div>
         <div class="carousel-item">
           <a href="#">
-            <img class="d-block w-100" src="../assets/images/carousel-3.jpg" alt="Promoção carrossel">
+            <img class="d-block w-100" src="assets/images/carousel-3.jpg" alt="Promoção carrossel">
           </a>
         </div>
       </div>
@@ -119,17 +120,17 @@
 
     <section class="row bg-white py-5 text-center mt-5">
       <div class="offset-1 col-3">
-        <img src="../assets/images/payment.svg" alt="ícone de cartão"/>
+        <img src="assets/images/payment.svg" alt="ícone de cartão"/>
         <div class="font-medium-2 mt-4">Escolha como pagar</div>
         <span class="text-muted font-small-3">Com o Mercado Pago, você paga com cartão, boleto ou Pix. Você também pode pagar em até 12x no boleto com o Mercado Crédito.</span>
       </div>
       <div class="col-3 ml-5">
-        <img src="../assets/images/shipping.svg" alt="ícone de caixa"/>
+        <img src="assets/images/shipping.svg" alt="ícone de caixa"/>
         <div class="font-medium-2 mt-4">Frete grátis a partir de R$ 79</div>
         <span class="text-muted font-small-3">Ao se cadastrar no Mercado Livre, você tem frete grátis em milhares de produtos.</span>
       </div>
       <div class="col-3 ml-5">
-        <img src="../assets/images/protected.svg" alt="ícone de escudo"/>
+        <img src="assets/images/protected.svg" alt="ícone de escudo"/>
         <div class="font-medium-2 mt-4">Segurança, do início ao fim</div>
         <span class="text-muted font-small-3">Você não gostou do que comprou? Devolva! No Mercado Livre não há nada que você não possa fazer, porque você está sempre protegido.</span>
       </div>
