Ajuste do layout e responsividade das paginas de home e detalhamento

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
   <body>
     <header>
       <nav class="shadow-lg bg-pale-yellow">
-        <div class="row pt-1">
+        <div class="row d-flex justify-content-between justify-content-md-start pt-1 mr-3 mr-md-0">
           <div class="offset-1 col-2">
             <div class="mt-2">
               <img src="assets/images/logo-2.png" class="logo-width" alt="logo"/>
             </div>
           </div>
           <div class="col-5">
-            <input class="border-0 rounded py-1 pl-4 mt-2 w-100" placeholder="Busque produtos marcas e muito mais...">
+            <input class="border-0 rounded py-1 pl-4 mt-2 w-100" placeholder="Buscar...">
             </input>
             <i class="bi-search d-flex align-self-center float-right position-relative mr-3 mt-n4"></i>
           </div>
@@ -47,7 +47,7 @@
             </span>
             <a class="text-decoration-none text-muted nav-text font-small-3 ml-4" href="#">Ofertas</a>
           </div>
-          <div class="col-3 d-flex justify-content-end">
+          <div class="col-3 d-flex justify-content-end flex-wrap">
             <a class="text-decoration-none text-muted nav-text font-small-4" href="#">Cadastrar</a>
             <a class="text-decoration-none text-muted nav-text font-small-4 ml-4" href="#">Entrar</a>
             <a class="text-decoration-none text-muted nav-text font-small-4 ml-4" href="#">Carrinho</a>
@@ -82,29 +82,29 @@
       </a>
     </section>
 
-    <section class="container">
+    <section class="container d-flex flex-wrap">
       <div class="card card-body mt-5">
         <div class="row">
-          <div class="col-3">
+          <div class="col-xs-12 col-md-3">
             <div class="text-nowrap">Pagamento rápido e seguro</div>
             <span class="text-muted font-small-2">com Mercado Pago</span>
           </div>
-          <div class="col-3">
+          <div class="col-xs-12 col-md-3 mt-4 mt-md-0">
             <i class="bi-credit-card text-info"></i>
             <span class="text-nowrap ml-1">Até 10 parcelas sem juros</span>
             <a class="d-block font-small-2 ml-4" href="#">Ver mais</a>
           </div>
-          <div class="col-3">
+          <div class="col-xs-12 col-md-3 mt-4 mt-md-0">
             <i class="bi-cash-coin text-info"></i>
             <span class="text-nowrap ml-1">Parcelamento sem cartão</span>
-            <a class="font-small-2 ml-4" href="#">Conheça o Mercado Crédito</a>
+            <a class="d-block font-small-2 ml-4" href="#">Conheça o Mercado Crédito</a>
           </div>
-          <div class="col-2">
+          <div class="col-xs-12 col-md-2 mt-4 mt-md-0">
             <i class="bi-qr-code-scan text-info"></i>
             <span class="text-nowrap ml-1">Via Pix</span>
             <a class="d-block font-small-2 ml-4" href="#">Ver mais</a>
           </div>
-          <div class="col-1 mt-3">
+          <div class="col-xs-12 col-md-1 mt-3 mt-4 mt-md-1">
             <a href="#" class="text-decoration-none cursor-pointer">
               <i class="bi-plus-circle-fill text-info font-medium-3"></i>
             </a>
@@ -118,18 +118,18 @@
       </div>
     </section>
 
-    <section class="row bg-white py-5 text-center mt-5">
-      <div class="offset-1 col-3">
+    <section class="row bg-white text-center pb-5 mt-5">
+      <div class="offset-1 col-xs-12 col-md-3 pt-5">
         <img src="assets/images/payment.svg" alt="ícone de cartão"/>
         <div class="font-medium-2 mt-4">Escolha como pagar</div>
         <span class="text-muted font-small-3">Com o Mercado Pago, você paga com cartão, boleto ou Pix. Você também pode pagar em até 12x no boleto com o Mercado Crédito.</span>
       </div>
-      <div class="col-3 ml-5">
+      <div class="col-xs-12 col-md-3 ml-5 pt-5">
         <img src="assets/images/shipping.svg" alt="ícone de caixa"/>
         <div class="font-medium-2 mt-4">Frete grátis a partir de R$ 79</div>
         <span class="text-muted font-small-3">Ao se cadastrar no Mercado Livre, você tem frete grátis em milhares de produtos.</span>
       </div>
-      <div class="col-3 ml-5">
+      <div class="col-xs-12 col-md-3 ml-5 pt-5">
         <img src="assets/images/protected.svg" alt="ícone de escudo"/>
         <div class="font-medium-2 mt-4">Segurança, do início ao fim</div>
         <span class="text-muted font-small-3">Você não gostou do que comprou? Devolva! No Mercado Livre não há nada que você não possa fazer, porque você está sempre protegido.</span>
@@ -175,7 +175,7 @@
       </div>
     </footer>
     <div class="row bg-white">
-      <span class="text-center w-100 font-small-2 text-muted py-2">
+      <span class="text-center w-100 font-small-2 text-muted py-2 px-4">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
       </span>
     </div>
