--- a/pages/detalhamento1.html
+++ b/pages/detalhamento1.html
@@ -13,15 +13,14 @@
 <body>
     <header>
         <nav class="shadow-lg bg-pale-yellow">
-            <div class="row pt-1">
+            <div class="row d-flex justify-content-between justify-content-md-start pt-1 mr-3 mr-md-0">
                 <div class="offset-1 col-2">
                     <div class="mt-2">
                         <img src="../assets/images/logo-2.png" class="logo-width" alt="logo" />
                     </div>
                 </div>
                 <div class="col-5">
-                    <input class="border-0 rounded py-1 pl-4 mt-2 w-100"
-                        placeholder="Busque produtos marcas e muito mais...">
+                    <input class="border-0 rounded py-1 pl-4 mt-2 w-100" placeholder="Buscar...">
                     </input>
                     <i class="bi-search d-flex align-self-center float-right position-relative mr-3 mt-n4"></i>
                 </div>
@@ -51,7 +50,7 @@
                     </span>
                     <a class="text-decoration-none text-muted nav-text font-small-3 ml-4" href="#">Ofertas</a>
                 </div>
-                <div class="col-3 d-flex justify-content-end">
+                <div class="col-3 d-flex justify-content-end flex-wrap">
                     <a class="text-decoration-none text-muted nav-text font-small-4" href="#">Cadastrar</a>
                     <a class="text-decoration-none text-muted nav-text font-small-4 ml-4" href="#">Entrar</a>
                     <a class="text-decoration-none text-muted nav-text font-small-4 ml-4" href="#">Carrinho</a>
@@ -60,14 +59,15 @@
         </nav>
     </header>
 
-    <main class="m-3 pt-3 row">
+    <main class="m-3 pt-3 card card-body">
 
 
 
+      <div class="row">
             <section class="col-md-8 col-sm-12">
 
                 <div class="d-lg-flex">
-                    <ul class="list-style-type-none pl-0 d-flex flex-lg-column">
+                    <ul class="list-style-type-none pl-0 d-flex flex-md-column flex-wrap">
                         <li>
                           <img class="imagem-apresentacao-produto" src="../assets/images/primeira-img-aside1.webp" alt="placa na caixa">
                         </li>
@@ -82,13 +82,13 @@
                         </li>
                     </ul>
 
-                    <img class="imagem-principal mx-5" src="../assets/images/foto-principal.webp" alt="">
+                    <img class="imagem-principal mx-md-5" src="../assets/images/foto-principal.webp" alt="">
 
                     <div>
-                        <span class="row w-100">
+                        <div class="row">
                           <p class="m-4 font-small-2">Novo | +100 vendidos</p>
-                          <i class="bi-heart text-info font-medium-3"></i>
-                        </span>
+                          <i class="bi-heart text-info font-medium-3 d-flex align-items-center"></i>
+                        </div>
 
 
                         <h5 class="text-dark mb-4">Placa de vídeo Nvidia Gigabyte AORUS GeForce RTX 30 Series RTX 3070 GV-N3070AORUS M-8GD (REV 1.0/1.1) 8GB</h5>
@@ -98,14 +98,14 @@
 
                         <span class="text-dark font-medium-1 font-weight-bold d-block mt-5">O que você precisa saber sobre este produto </span>
 
-                        <ul class="text-dark font-small-3 pl-0">
+                        <ul class="text-dark font-small-3 pl-md-0">
                             <li>Interface PCI-Express 4.0.</li>
                             <li>Frequência base do núcleo de 1845MHz.</li>
                             <li>Resolução máxima: 7680x4320.</li>
                             <li>Compatível com DirectX e OpenGL.</li>
                             <li>Requer de 650W de alimentação.</li>
-                            <li>Permite a conexão de até 4 monitores simultâneos.</li>
-                            <li>Formatos de conexão: 3 DisplayPort 1.4a, 2 HDMI 2.1, HDMI 2.0.</li>
+                            <li>Permite a conexão de 4 monitores simultâneos.</li>
+                            <li>Formatos de conexão: 3 DisplayPort, 3 HDMI.</li>
                             <li>Inclui acessórios.</li>
                             <li>Ideal para trabalhar em alta velocidade.</li>
                             <li class="text-info list-style-type-none">Ver características</li>
@@ -117,7 +117,7 @@
                     </div>
                 </div>
 
-                <div class="mx-5">
+                <div class="m-5">
 
                     <h1 class="text-dark my-4">Descrição</h1>
 
@@ -142,7 +142,7 @@
 
             </section>
 
-            <section class="col-md-4 col-sm-12 ">
+            <section class="col-md-4 col-sm-12">
 
                 <aside class="rounded pb-5">
 
@@ -167,8 +167,8 @@
                         <h3 class="font-medium-1 font-weight-bold text-dark">Informações sobre o vendedor</h3>
 
                         <div>
-                            <div class="row">
-                                <img class="mx-3" src="../assets/images/award.svg" alt="">
+                            <div class="row text-dark">
+                                <i class="bi-award mx-3 mt-2"></i>
                                 <div class="font-small-3">
                                     <span>E-comerce</span>
                                     <span class="d-block">Um dos melhores do site</span>
@@ -180,12 +180,12 @@
 
                             <div class="d-flex text-center mt-4 ">
 
-                                <div class="border-right px-3">
+                                <div class="border-right px-3 text-dark">
                                     <img class="imagems-avalicao" src="../assets/images/message-positive.svg" alt="">
                                     <p>Presta bom atendimento</p>
                                 </div>
 
-                                <div class="px-3">
+                                <div class="px-3 text-dark">
                                     <img class="imagems-avalicao" src="../assets/images/time-positive.svg" alt="">
                                     <p>Entrega os produtos dentro do prazo</p>
                                 </div>
@@ -194,7 +194,7 @@
                     </div>
                 </aside>
 
-                <aside class="pb-5 ">
+                <aside class="pb-5">
 
                     <div class="card" >
                         <div class="card-header text-dark bg-white">Opções de Usados e Recondicionados</div>
@@ -205,7 +205,7 @@
 
                 </aside>
 
-                <aside class="pb-5 ">
+                <aside class="pb-5">
 
                     <div class="card" >
                         <p class="card-header text-dark bg-white"> Meios de pagamento</p>
@@ -240,23 +240,53 @@
                 </div>
 
             </section>
+            </div>
 
     </main>
 
-    <footer>
-        <div class="text-center">
-            <ul class=" d-flex lista-footer text-center justify-content-center ">
-                <li class="m-2">Trabalhe conosco</li>
-                <li class="m-2">Termos e Condições </li>
-                <li class="m-2">Como cuidamos da sua privacidade</li>
-                <li class="m-2">Acessibilidade </li>
-                <li class="m-2">Informações sobre seguro</li>
-                <li class="m-2">Contato</li>
-            </ul>
-            <p>Copyright © 1999-2023 Ebazar.com.br LTDA.</p>
-            <p>CNPJ n.º 03.007.331/0001-41 / Av. das Nações Unidas, nº 3.003, Bonfim, Osasco/SP - CEP 06233-903.</p>
+    <footer class="container">
+      <div class="row my-5">
+        <div class="col-3">
+          <span class="font-small-3 font-weight-bold">Sobre</span>
+          <ul class="text-muted font-small-2 list-style-type-none p-0 mt-3">
+            <li><a class="text-decoration-none text-muted" href="#">Mercado livre</a></li>
+            <li><a class="text-decoration-none text-muted" href="#">Tendências</a></li>
+            <li><a class="text-decoration-none text-muted" href="#">Blog</a></li>
+            <li><a class="text-decoration-none text-muted" href="#">Sustentabilidade</a></li>
+          </ul>
         </div>
+        <div class="col-3">
+          <span class="font-small-3 font-weight-bold">Redes sociais</span>
+          <ul class="text-muted font-small-2 list-style-type-none p-0 mt-3">
+            <li><a class="text-decoration-none text-muted" href="#">Twitter</a></li>
+            <li><a class="text-decoration-none text-muted" href="#">Facebook</a></li>
+            <li><a class="text-decoration-none text-muted" href="#">Instagram</a></li>
+            <li><a class="text-decoration-none text-muted" href="#">YouTube</a></li>
+          </ul>
+        </div>
+        <div class="col-3">
+          <span class="font-small-3 font-weight-bold">Minha conta</span>
+          <ul class="text-muted font-small-2 list-style-type-none p-0 mt-3">
+            <li><a class="text-decoration-none text-muted" href="#">Entre</a></li>
+            <li><a class="text-decoration-none text-muted" href="#">Vender</a></li>
+          </ul>
+        </div>
+        <div class="col-3">
+          <span class="font-small-3 font-weight-bold">Contato</span>
+          <ul class="text-muted font-small-2 list-style-type-none p-0 mt-3">
+            <li><a class="text-decoration-none text-muted" href="#">Comprar</a></li>
+            <li><a class="text-decoration-none text-muted" href="#">Vender</a></li>
+            <li><a class="text-decoration-none text-muted" href="#">Solução de problemas</a></li>
+            <li><a class="text-decoration-none text-muted" href="#">Segurança</a></li>
+          </ul>
+        </div>
+      </div>
     </footer>
+    <div class="row bg-white">
+      <span class="text-center w-100 font-small-2 text-muted py-2 px-4">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
+      </span>
+    </div>
 
     <div class="modal fade" id="cepModal" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered">
