--- a/pages/login.html
+++ b/pages/login.html
@@ -78,7 +78,7 @@
 
     <footer class="">
         <div class="text-center">
-            <ul class=" d-flex lista-footer text-center justify-content-center ">
+            <ul class=" d-flex list-style-type-none text-center justify-content-center ">
                 <li class="m-2">Trabalhe conosco</li>
                 <li class="m-2">Termos e Condições </li>
                 <li class="m-2">Como cuidamos da sua privacidade</li>
