--- a/index.html
+++ b/index.html
@@ -115,28 +115,89 @@
       </div>
     </div>
 
-    <div class="row col-12 mt-5">
+    <div class="row col-12 mt-5 card-size">
       <h4>Ofertas do dia</h4>
       <a href="#" class="font-small-2 mt-2 ml-3">Ver todas</a>
     </div>
+
+    <section class="row ">
+
+      <div class="card col-sm-12 col-md-6  p-4 mt-3" style="">
+        <img class="card-img-top" src="./assets/images/foto-principal.webp" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">RTX 3070</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="./pages/detalhamento1.html" class="btn btn-primary">Ver produto</a>
+        </div>
+      </div>
+
+        <div class="card col-sm-12 col-md-6  p-4 mt-3" style="">
+          <img class="card-img-top" src="./assets/images/mouse-capa.webp" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Mouse</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="./pages/detalhamento5.html" class="btn btn-primary">Ver produto</a>
+          </div>
+        </div>
+
+        <div class="card col-sm-12 col-md-6  p-4 mt-3" style="">
+          <img class="card-img-top" src="./assets/images/blusa-capa.webp" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Blusa de frio</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="./pages/detalhamento4.html" class="btn btn-primary">Ver produto</a>
+          </div>
+        </div>
+
+        <div class="card col-sm-12 col-md-6  p-4 mt-3" style="">
+          <img class="card-img-top" src="./assets/images/foto-produto-teclado-principal.webp" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Teclado</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="./pages/detalhamento2.html" class="btn btn-primary">Ver produto</a>
+          </div>
+        </div>
+
+        <div class="card col-sm-12 col-md-6  p-4 mt-3" style="">
+          <img class="card-img-top" src="./assets/images/imagem-nintendo-switch-capa.webp" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title"> Nintendo Switch</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="./pages/detalhamento3.html" class="btn btn-primary">Ver produto</a>
+          </div>
+        </div>
+
+        <div class="card col-sm-12 col-md-6  p-4 mt-3" style="">
+          <img class="card-img-top" src="./assets/images/ssd-capa.webp" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">SSD Kingston</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="./pages/detalhamento6.html" class="btn btn-primary">Ver produto</a>
+          </div>
+        </div>
+
+    </section>
+
+    </div>
+
   </section>
 
-  <section class="row bg-white py-5 text-center mt-5">
-    <div class=" col-md-4 col-sm-12">
+  <section class="row bg-white py-5 text-center mt-5 mx-4">
+    <div class=" col-sm-12 col-md-4">
       <img src="../assets/images/payment.svg" alt="ícone de cartão" />
       <div class="font-medium-2 mt-4 ">Escolha como pagar</div>
       <p class="text-muted font-small-3 text-wrap px-2">Com o Mercado Pago, você paga com cartão, boleto ou Pix. Você
         também pode
         pagar em até 12x no boleto com o Mercado Crédito.</p>
     </div>
-    <div class=" col-md-4 col-sm-12">
+    <div class="  col-sm-12 col-md-4">
       <img src="../assets/images/shipping.svg" alt="ícone de caixa" />
       <div class="font-medium-2 mt-4">Frete grátis a partir de R$ 79</div>
       <p class="text-muted font-small-3 text-wrap">Ao se cadastrar no Mercado Livre, você tem frete grátis em milhares
         de
         produtos.</p>
     </div>
-    <div class=" col-md-4 col-sm-12 text-sm-wrap">
+    <div class="  col-sm-12 col-md-4 text-sm-wrap">
       <img src="../assets/images/protected.svg" alt="ícone de escudo" />
       <div class="font-medium-2 mt-4">Segurança, do início ao fim</div>
       <p class="text-muted font-small-3 text-wrap">Você não gostou do que comprou? Devolva! No Mercado Livre não há nada
