--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
           <a class="text-decoration-none text-muted nav-text font-small-3 ml-4" href="#">Ofertas</a>
         </div>
         <div class="col-3 d-flex justify-content-center flex-wrap">
-          <a class="text-decoration-none text-muted nav-text font-small-4" href="#">Cadastrar</a>
-          <a class="text-decoration-none text-muted nav-text font-small-4 ml-4" href="#">Entrar</a>
+          <a class="text-decoration-none text-muted nav-text font-small-4" href="./pages/cadastro.html">Cadastrar</a>
+          <a class="text-decoration-none text-muted nav-text font-small-4 ml-4" href="./pages/login.html">Entrar</a>
           <a class="text-decoration-none text-muted nav-text font-small-4 ml-4" href="#">Carrinho</a>
+          <a class="text-decoration-none text-muted nav-text font-small-4 ml-4" href="./pages/alterar-dados.html">Configuração</a>
         </div>
       </div>
     </nav>
