--- a/pages/login.html
+++ b/pages/login.html
@@ -55,7 +55,7 @@
                         <label for="exampleInputPassword1">Senha</label>
                         <input required type="password" class="form-control" id="exampleInputPassword1">
                     </div>
-                    <button type="submit" class="btn btn-primary mb-2 ">Enviar</button>
+                    <button type="submit" class="btn btn-primary mb-2 ">Entrar</button>
                     <button type="submit" class="btn btn-success mb-2"> <img src="../assets/images/person-add.svg"
                             alt="">
                         Criar conta</button>
