--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -44,33 +44,33 @@
 
         <section class="conteudo-principal d-flex justify-content-center p-5">
 
-            <form class="">
+            <form class="" onsubmit="validation()" autocomplete="off">
                 <h1 class="display-6 text-dark"> Criar conta:</h1>
 
                 <div class="form-row text">
                     <div class="form-group col-md-6">
-                        <label for="inputEmail4">email</label>
-                        <input required type="email" class="form-control" id="inputEmail4">
+                        <label for="email">email</label>
+                        <input type="text" class="form-control" id="email">
                     </div>
                     <div class="form-group col-md-6">
-                        <label for="inputPassword4">senha</label>
-                        <input required type="password" class="form-control" id="inputPassword4">
+                        <label for="senha">senha</label>
+                        <input type="password" class="form-control" id="senha">
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="inputAddress">endereço</label>
-                    <input required type="text" class="form-control" id="inputAddress" placeholder="">
+                    <label for="endereco">endereço</label>
+                    <input type="text" class="form-control" id="endereco" placeholder="" ">
                 </div>
 
-                <div class="form-row">
+                <div class=" form-row">
                     <div class="form-group col-md-6">
-                        <label for="inputCity">cidade</label>
-                        <input required type="text" class="form-control" id="inputCity">
+                        <label for="cidade">cidade</label>
+                        <input type="text" class="form-control" id="cidade">
                     </div>
                     <div class="form-group col-md-4">
                         <label for="inputState">estado</label>
-                        <select id="inputState" class="form-control">
-                            <option selected>Escolha</option>
+                        <select id="estado" class="form-control">
+                            <option value="" disabled selected>Escolha</option>
                             <option value="AC">Acre</option>
                             <option value="AL">Alagoas</option>
                             <option value="AP">Amapá</option>
@@ -101,13 +101,13 @@
                         </select>
                     </div>
                     <div class="form-group col-md-2">
-                        <label for="inputZip">Complemento</label>
-                        <input required type="text" class="form-control" id="inputZip">
+                        <label for="complemento">Complemento</label>
+                        <input type="text" class="form-control" id="complemento">
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="form-check">
-                        <input required class="form-check-input" type="checkbox" id="gridCheck">
+                        <input class="form-check-input" type="checkbox" id="aceite">
                         <label class="form-check-label" for="gridCheck">
                             Eu aceito os termos e condições.
                         </label>
@@ -136,6 +136,9 @@
             <p>CNPJ n.º 03.007.331/0001-41 / Av. das Nações Unidas, nº 3.003, Bonfim, Osasco/SP - CEP 06233-903.</p>
         </div>
     </footer>
+
+    <script src="../js/common.js"></script>
+
 </body>
 
 </html>
