--- a/pages/cadastro-produto.html
+++ b/pages/cadastro-produto.html
@@ -40,9 +40,26 @@
         </nav>
     </header>
 
+
     <main class="p-5 m-4">
 
         <section class="conteudo-principal d-flex justify-content-center p-5">
+
+            <div class="modal" tabindex="-1" role="dialog" id="welcomeModal">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">Boas vindas</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <p>Seja bem vindo!</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
             <form class="" id="forms" onsubmit="return validationFormProduct(event)" autocomplete="off">
 
