--- a/pages/cadastro-usuario.html
+++ b/pages/cadastro-usuario.html
@@ -44,6 +44,24 @@
 
         <section class="conteudo-principal d-flex justify-content-center p-5">
 
+
+            <div class="modal" tabindex="-1" role="dialog" id="welcomeModal">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">Boas vindas</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <p>Seja bem vindo!</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
             <form class="" onsubmit="return validationFormUser(event)" autocomplete="off" id="forms">
 
                 <div class="alert alert-danger d-none alert" role="alert" id="alert">
@@ -86,7 +104,7 @@
                 <div class=" form-row">
                     <div class="form-group col-md-6">
                         <label for="cidade">cidade</label>
-                        <input type="text" class="form-control" id="cidade"  data-required="true">
+                        <input type="text" class="form-control" id="cidade" data-required="true">
                     </div>
                     <div class="form-group col-md-4">
                         <label for="inputState">estado</label>
